[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menu/HUD/Score.png" type="Texture" id=1]
[ext_resource path="res://Menu/ScoreDisplay/ScoreDisplay.gd" type="Script" id=2]
[ext_resource path="res://Menu/Graphics/theme/defaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://Score/DistancePoints.gd" type="Script" id=4]
[ext_resource path="res://Menu/Graphics/theme/MasterTheme.tres" type="Theme" id=5]
[ext_resource path="res://Menu/Graphics/theme/font/FontDerelictRegularBig.tres" type="DynamicFont" id=6]
[ext_resource path="res://Score/ComboPoints.gd" type="Script" id=7]
[ext_resource path="res://Menu/HUD/Bars/ComboBarBackground.png" type="Texture" id=8]
[ext_resource path="res://Menu/HUD/Bars/BomboBar.png" type="Texture" id=9]

[sub_resource type="CanvasItemMaterial" id=1]

render_priority = 0
blend_mode = 0
light_mode = 0

[node name="ScoreDisplay" type="TextureRect"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 490.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
stretch_mode = 0
script = ExtResource( 2 )
modifierMultiplier = 1.1

[node name="ScoreDisplay" type="Label" parent="." index="0"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -64.0
margin_right = -24.0
margin_bottom = -14.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 3 )
text = "Score : 0000000000"
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme" ]

[node name="DistancePoints" type="Node2D" parent="." index="1"]

script = ExtResource( 4 )
valueMultiplier = 0.5

[node name="ComboPanel" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 167.0
margin_bottom = 127.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="ComboPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 20.0
margin_right = 116.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "Combo :"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="ComboDisplay" type="Label" parent="ComboPanel" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.5
margin_top = -3.5
margin_right = 38.5
margin_bottom = 46.5
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 7 )
_sections_unfolded = [ "Rect", "Theme", "custom_fonts" ]
comboTime = 3
maxCombo = 5

[node name="ComboBar" type="TextureProgress" parent="ComboPanel/ComboDisplay" index="0"]

material = SubResource( 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 125.0
margin_top = -55.0
margin_right = 158.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 8 )
texture_over = null
texture_progress = ExtResource( 9 )
fill_mode = 3
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
_sections_unfolded = [ "Material", "Rect", "Textures", "Visibility" ]

[node name="ComboTimer" type="Timer" parent="ComboPanel/ComboDisplay" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="ComboPanel/ComboDisplay/ComboTimer" to="ComboPanel/ComboDisplay" method="onComboTimerTimeout"]


